<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SunShine</string>
    <string name="action_search">Search</string>
    <string name="edit_hint">Please input Chinese city in Chinese</string>
    <string name="error_message">Please input Chinese city name, or check your network connection! We try to fetch history data</string>
    <string name="action_share">Share</string>
    <string name="day_temp">"Day_Temperature "</string>
    <string name="night_temp">"Night_Temperature "</string>
    <string name="day_condition">"Day_Condition "</string>
    <string name="night_condition">"Night_Condition "</string>
    <string name="day_wind_direction">"Day_Wind_Direction "</string>
    <string name="night_wind_direction">"Night_Wind_Direction "</string>
    <string name="day_wind_power">"Day_Wind_Power "</string>
    <string name="night_wind_power">"Night_Wind_Power "</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="action_setting">Setting</string>

    <string name="pref_city_key" translatable="false">City Key</string>
    <string name="pref_city_default" translatable="false">广州</string>
    <string name="pref_city_label">City</string>
    <string name="pref_temp_units_label">Temperature Units</string>
    <string name="pref_temp_units_default" translatable="false">Centigrade</string>
    <string name="pref_temp_units_key" translatable="false">Temperature Units Key</string>

    <string name="pref_temp_centigrade" translatable="false">Centigrade</string>
    <string name="pref_temp_fahrenheit" translatable="false">Fahrenheit</string>
    <string name="pref_temp_label_centigrade">Centigrade</string>
    <string name="pref_temp_label_fahrenheit">Fahrenheit</string>

    <string name="pref_notification_key" translatable="false">Notification Key</string>
    <string name="pref_notification_default" translatable="false">Notification Default</string>
    <string name="pref_notification_label">Weather notification</string>
    <string name="pref_notification_on">Enabled</string>
    <string name="pref_notification_off">Not Enabled</string>

    <string name="temperature_format" translatable="false">
        <xliff:g id="temp">%1.0f</xliff:g>℉
    </string>
    <string name="last_notification_key" translatable="false">Key Last Notification</string>

</resources>
